--- a/src/views/about/about.ejs
+++ b/src/views/about/about.ejs
@@ -4,14 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>halo</title>
+    <title>About Me</title>
 </head>
 
 <body>
-    <h1>Halo form view</h1>
-    <p>
-        <%=data%>
-    </p>
+    <p>About me</p>
 </body>
 
 </html>
