add models migrations seeders

--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -11,6 +11,7 @@
     <h1>Halo form view</h1>
     <p>
         <%=data%>
+            <!-- data được tuyền vào từ hàm getHomePage bên file homeController thông qua res.render -->
     </p>
 </body>
 
