--- a/src/views/crud.ejs
+++ b/src/views/crud.ejs
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <form>
+            <form action="/post-crud" method="POST">
                 <div class="col-12">Crear a new user</div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
@@ -59,19 +59,11 @@
                     </div>
                     <div class="form-group col-md-3">
                         <label for="inputZip">Role</label>
-                        <select name="gender" class="form-control">
+                        <select name="roleId" class="form-control">
                             <option value="1">Admin</option>
-                            <option value="1">Doctor</option>
-                            <option value="1">Patient</option>
+                            <option value="2">Doctor</option>
+                            <option value="3">Patient</option>
                         </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Check me out
-                        </label>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Sign in</button>
